removing jquery call to fix profile image cropping

--- a/src/scss/base/images.scss
+++ b/src/scss/base/images.scss
@@ -3,4 +3,8 @@
     max-width: 100%;
     height: auto;
   }
+  .alignleft {
+    float: left;
+    margin-right: 20px;
+  }
 }
